Practica y pruebas DatMin

--- a/Clase 04.ipynb
+++ b/Clase 04.ipynb
@@ -705,7 +705,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -837,8 +839,8 @@
    "metadata": {},
    "source": [
     "## Sobreajuste\n",
-    "el sobreajuste es la produccion de un analisis que se corresponde demasiado o exactamente con un conjutn oparticular de datos, por l tanto, puede no ajustarse a datos adicionales o predecir furutas observaciones de manera confiable  \n",
-    "Durante la fase de sobreajuste el exito al responder  las muestas de entrenamiento sique inqcrementandose "
+    "El sobreajuste es la produccion de un analisis que se corresponde demasiado o exactamente, con un conjunto en particular de datos, por lo tanto, puede no ajustarse a datos adicionales o predecir futuras observaciones de manera confiable.  \n",
+    "Durante la fase de sobreajuste el exito al responder  las muestras de entrenamiento sique inqcrementandose "
    ]
   },
   {
