--- a/PRACTICA.ipynb
+++ b/PRACTICA.ipynb
@@ -1178,6 +1178,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 82.    ,   2.11  ,  41.39  , ...,   0.    ,   0.    ,   1.    ],\n",
+       "       [690.    ,   2.155 ,  41.39  , ...,   1.    ,   0.    ,   0.    ],\n",
+       "       [270.    ,   2.1275,  41.4075, ...,   1.    ,   0.    ,   0.    ],\n",
+       "       ...,\n",
+       "       [156.    ,   2.1175,  41.3925, ...,   1.    ,   0.    ,   0.    ],\n",
+       "       [156.    ,   2.1175,  41.3925, ...,   1.    ,   0.    ,   0.    ],\n",
+       "       [ 29.    ,   2.1025,  41.385 , ...,   1.    ,   0.    ,   0.    ]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
