--- a/NYCTaxi.ipynb
+++ b/NYCTaxi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,41 +244,387 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VendorID</th>\n",
+       "      <th>RateCodeID</th>\n",
+       "      <th>Pickup_longitude</th>\n",
+       "      <th>Pickup_latitude</th>\n",
+       "      <th>Dropoff_longitude</th>\n",
+       "      <th>Dropoff_latitude</th>\n",
+       "      <th>Passenger_count</th>\n",
+       "      <th>Trip_distance</th>\n",
+       "      <th>Fare_amount</th>\n",
+       "      <th>Extra</th>\n",
+       "      <th>MTA_tax</th>\n",
+       "      <th>Tip_amount</th>\n",
+       "      <th>Tolls_amount</th>\n",
+       "      <th>Ehail_fee</th>\n",
+       "      <th>improvement_surcharge</th>\n",
+       "      <th>Total_amount</th>\n",
+       "      <th>Payment_type</th>\n",
+       "      <th>Trip_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048575e+06</td>\n",
+       "      <td>1.048570e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.778683e+00</td>\n",
+       "      <td>1.098100e+00</td>\n",
+       "      <td>-7.381823e+01</td>\n",
+       "      <td>4.068497e+01</td>\n",
+       "      <td>-7.381280e+01</td>\n",
+       "      <td>4.068029e+01</td>\n",
+       "      <td>1.389390e+00</td>\n",
+       "      <td>2.782559e+00</td>\n",
+       "      <td>1.173290e+01</td>\n",
+       "      <td>3.427971e-01</td>\n",
+       "      <td>4.865826e-01</td>\n",
+       "      <td>1.116572e+00</td>\n",
+       "      <td>9.529348e-02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.807908e-01</td>\n",
+       "      <td>1.499850e+01</td>\n",
+       "      <td>1.561091e+00</td>\n",
+       "      <td>1.022894e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>4.151334e-01</td>\n",
+       "      <td>6.505393e-01</td>\n",
+       "      <td>2.947688e+00</td>\n",
+       "      <td>1.625452e+00</td>\n",
+       "      <td>3.009728e+00</td>\n",
+       "      <td>1.659509e+00</td>\n",
+       "      <td>1.078429e+00</td>\n",
+       "      <td>2.952046e+00</td>\n",
+       "      <td>9.551922e+00</td>\n",
+       "      <td>3.605977e-01</td>\n",
+       "      <td>8.480691e-02</td>\n",
+       "      <td>3.804000e+00</td>\n",
+       "      <td>1.167153e+00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.344232e-02</td>\n",
+       "      <td>9.668206e+02</td>\n",
+       "      <td>5.218143e-01</td>\n",
+       "      <td>1.495658e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>-7.535131e+01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-7.543967e+01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-4.000000e+02</td>\n",
+       "      <td>-1.000000e+00</td>\n",
+       "      <td>-5.000000e-01</td>\n",
+       "      <td>-1.450000e+01</td>\n",
+       "      <td>-1.816000e+01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-4.000000e+02</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>-7.395934e+01</td>\n",
+       "      <td>4.070041e+01</td>\n",
+       "      <td>-7.396799e+01</td>\n",
+       "      <td>4.070253e+01</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.010000e+00</td>\n",
+       "      <td>6.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>5.000000e-01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000e-01</td>\n",
+       "      <td>7.800000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>-7.394547e+01</td>\n",
+       "      <td>4.074686e+01</td>\n",
+       "      <td>-7.394550e+01</td>\n",
+       "      <td>4.074789e+01</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.830000e+00</td>\n",
+       "      <td>9.000000e+00</td>\n",
+       "      <td>5.000000e-01</td>\n",
+       "      <td>5.000000e-01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000e-01</td>\n",
+       "      <td>1.080000e+01</td>\n",
+       "      <td>2.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>-7.391782e+01</td>\n",
+       "      <td>4.080240e+01</td>\n",
+       "      <td>-7.391185e+01</td>\n",
+       "      <td>4.079070e+01</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>3.540000e+00</td>\n",
+       "      <td>1.450000e+01</td>\n",
+       "      <td>5.000000e-01</td>\n",
+       "      <td>5.000000e-01</td>\n",
+       "      <td>1.750000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000e-01</td>\n",
+       "      <td>1.700000e+01</td>\n",
+       "      <td>2.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2.000000e+00</td>\n",
+       "      <td>9.900000e+01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>4.291825e+01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>4.291817e+01</td>\n",
+       "      <td>9.000000e+00</td>\n",
+       "      <td>8.304000e+02</td>\n",
+       "      <td>8.000000e+02</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>8.000000e-01</td>\n",
+       "      <td>4.900000e+02</td>\n",
+       "      <td>8.698800e+02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000e-01</td>\n",
+       "      <td>9.899704e+05</td>\n",
+       "      <td>5.000000e+00</td>\n",
+       "      <td>2.000000e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           VendorID    RateCodeID  Pickup_longitude  Pickup_latitude  \\\n",
+       "count  1.048575e+06  1.048575e+06      1.048575e+06     1.048575e+06   \n",
+       "mean   1.778683e+00  1.098100e+00     -7.381823e+01     4.068497e+01   \n",
+       "std    4.151334e-01  6.505393e-01      2.947688e+00     1.625452e+00   \n",
+       "min    1.000000e+00  1.000000e+00     -7.535131e+01     0.000000e+00   \n",
+       "25%    2.000000e+00  1.000000e+00     -7.395934e+01     4.070041e+01   \n",
+       "50%    2.000000e+00  1.000000e+00     -7.394547e+01     4.074686e+01   \n",
+       "75%    2.000000e+00  1.000000e+00     -7.391782e+01     4.080240e+01   \n",
+       "max    2.000000e+00  9.900000e+01      0.000000e+00     4.291825e+01   \n",
+       "\n",
+       "       Dropoff_longitude  Dropoff_latitude  Passenger_count  Trip_distance  \\\n",
+       "count       1.048575e+06      1.048575e+06     1.048575e+06   1.048575e+06   \n",
+       "mean       -7.381280e+01      4.068029e+01     1.389390e+00   2.782559e+00   \n",
+       "std         3.009728e+00      1.659509e+00     1.078429e+00   2.952046e+00   \n",
+       "min        -7.543967e+01      0.000000e+00     0.000000e+00   0.000000e+00   \n",
+       "25%        -7.396799e+01      4.070253e+01     1.000000e+00   1.010000e+00   \n",
+       "50%        -7.394550e+01      4.074789e+01     1.000000e+00   1.830000e+00   \n",
+       "75%        -7.391185e+01      4.079070e+01     1.000000e+00   3.540000e+00   \n",
+       "max         0.000000e+00      4.291817e+01     9.000000e+00   8.304000e+02   \n",
+       "\n",
+       "        Fare_amount         Extra       MTA_tax    Tip_amount  Tolls_amount  \\\n",
+       "count  1.048575e+06  1.048575e+06  1.048575e+06  1.048575e+06  1.048575e+06   \n",
+       "mean   1.173290e+01  3.427971e-01  4.865826e-01  1.116572e+00  9.529348e-02   \n",
+       "std    9.551922e+00  3.605977e-01  8.480691e-02  3.804000e+00  1.167153e+00   \n",
+       "min   -4.000000e+02 -1.000000e+00 -5.000000e-01 -1.450000e+01 -1.816000e+01   \n",
+       "25%    6.000000e+00  0.000000e+00  5.000000e-01  0.000000e+00  0.000000e+00   \n",
+       "50%    9.000000e+00  5.000000e-01  5.000000e-01  0.000000e+00  0.000000e+00   \n",
+       "75%    1.450000e+01  5.000000e-01  5.000000e-01  1.750000e+00  0.000000e+00   \n",
+       "max    8.000000e+02  1.000000e+00  8.000000e-01  4.900000e+02  8.698800e+02   \n",
+       "\n",
+       "       Ehail_fee  improvement_surcharge  Total_amount  Payment_type  \\\n",
+       "count        0.0           1.048575e+06  1.048575e+06  1.048575e+06   \n",
+       "mean         NaN           2.807908e-01  1.499850e+01  1.561091e+00   \n",
+       "std          NaN           7.344232e-02  9.668206e+02  5.218143e-01   \n",
+       "min          NaN           0.000000e+00 -4.000000e+02  1.000000e+00   \n",
+       "25%          NaN           3.000000e-01  7.800000e+00  1.000000e+00   \n",
+       "50%          NaN           3.000000e-01  1.080000e+01  2.000000e+00   \n",
+       "75%          NaN           3.000000e-01  1.700000e+01  2.000000e+00   \n",
+       "max          NaN           3.000000e-01  9.899704e+05  5.000000e+00   \n",
+       "\n",
+       "         Trip_type   \n",
+       "count  1.048570e+06  \n",
+       "mean   1.022894e+00  \n",
+       "std    1.495658e-01  \n",
+       "min    1.000000e+00  \n",
+       "25%    1.000000e+00  \n",
+       "50%    1.000000e+00  \n",
+       "75%    1.000000e+00  \n",
+       "max    2.000000e+00  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfg.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_filter = dfg.loc[dfg['Pickup_longitude'] != (0)]\n",
+    "#df_clean = points.loc[points['Pickup_longitude'] != str(0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_filter = data_filter.loc[data_filter['Pickup_latitude'] != (0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_filter = data_filter.loc[data_filter['Dropoff_longitude'] != (0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "VendorID: 0\n",
-      "lpep_pickup_datetime: 0\n",
-      "Lpep_dropoff_datetime: 0\n",
-      "Store_and_fwd_flag: 0\n",
-      "RateCodeID: 0\n",
-      "Pickup_longitude: 0\n",
-      "Pickup_latitude: 0\n",
-      "Dropoff_longitude: 0\n",
-      "Dropoff_latitude: 0\n",
-      "Passenger_count: 0\n",
-      "Trip_distance: 0\n",
-      "Fare_amount: 0\n",
-      "Extra: 0\n",
-      "MTA_tax: 0\n",
-      "Tip_amount: 0\n",
-      "Tolls_amount: 0\n",
-      "Ehail_fee: 1048575\n",
-      "improvement_surcharge: 0\n",
-      "Total_amount: 0\n",
-      "Payment_type: 0\n",
-      "Trip_type : 5\n"
+     "data": {
+      "text/plain": [
+       "(1045622, 21)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_filter.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_coords = data_filter['Dropoff_longitude'].astype(float)\n",
+    "y_coords = data_filter['Pickup_latitude'].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-f1a960c1e598>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcol\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_filter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   4370\u001b[0m         if (name in self._internal_names_set or name in self._metadata or\n\u001b[0;32m   4371\u001b[0m                 name in self._accessors):\n\u001b[1;32m-> 4372\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4373\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4374\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'columns'"
      ]
     }
    ],
    "source": [
-    "col = dfg.columns.tolist()\n",
+    "col = data_filter.columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-d7b50f6f2b9b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcol\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_filter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mcolumn\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcol\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m   \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"{}: {}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdatafilter\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   4370\u001b[0m         if (name in self._internal_names_set or name in self._metadata or\n\u001b[0;32m   4371\u001b[0m                 name in self._accessors):\n\u001b[1;32m-> 4372\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4373\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4374\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'columns'"
+     ]
+    }
+   ],
+   "source": [
     "for column in col:\n",
-    "  print(\"{}: {}\".format(column, dfg[column].isnull().sum()))"
+    "  print(\"{}: {}\".format(columns, datafilter[column].isnull().sum()))"
    ]
   },
   {
